# python-packaging

./: README.md
example/: README.md  general_requirements.txt
example/main_project/: pyproject.toml
example/main_project/src/main_project/: __init__.py  project_main.py
example/util_lib/: pyproject.toml
example/util_lib/src/util_lib/: __init__.py  print_general_deps.py
