[project]
name = "main-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "orbuluh", email = "scuendless@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
